--- a/index.html
+++ b/index.html
@@ -1,96 +1,132 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Responsive Portfolio | Ritika Kumari</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <!-- Fontawesome CDN Link -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    <!-- Move to up button -->
+<head>
+  <meta charset="UTF-8" />
+  <title>Responsive Portfolio | Ritika Kumari</title>
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <!-- Fontawesome CDN Link -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 
-    <!-- <div class="scroll-button">
+<body>
+  <!-- Move to up button -->
+
+  <!-- <div class="scroll-button">
       <a href="#home"><i class="fas fa-arrow-up"></i></a>
     </div> -->
 
-    <!-- navgaition menu -->
-    <nav>
-      <div class="navbar">
-        <div class="logo"><a href="#">Portfolio.</a></div>
-        <ul class="menu">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-      <div class="menu-btn">
-        <i class="fas fa-bars"></i>
-      </div>
-    </nav>
+  <!-- navgaition menu -->
+  <nav>
+    <div class="navbar">
+      <div class="logo"><a href="#">Portfolio</a></div>
+      <ul class="menu">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+    <div class="menu-btn">
+      <i class="fas fa-bars"></i>
+    </div>
+  </nav>
 
-    <div id="particles-js">
-      <div class="header">
-        <h1>
-          <span class="site-title">Ritika Kumari</span>
-          <span class="site-description"
-            >Java Developer • App Developer • Web Developer</span
-          >
-        </h1>
+  <div id="particles-js">
+    <div class="header">
+      <h1>
+        <span class="site-title">Ritika Kumari</span>
+        <span class="site-description">Java Developer • App Developer • Web Developer</span>
+      </h1>
 
-        <div class="header-icons">
-          <a
-            aria-label="My LinkedIn Profile"
-            target="_blank"
-            href="https://www.linkedin.com/in/ritika-kumari19/
-"
-          >
-            <i class="icon fab fa-linkedin-in" aria-hidden="true"></i>
-          </a>
-          <a
-            aria-label="My Github Profile"
-            target="_blank"
-            href="https://github.com/Cayra19
-"
-          >
-            <i class="icon fab fa-github" aria-hidden="true"></i>
-          </a>
-          <a
-            aria-label="My Résumé"
-            target="_blank"
-            href="./assets/Ritika_Kumari_Resume.pdf"
-          >
-            <i class="icon fas fa-file-pdf" aria-hidden="true"></i>
-          </a>
-          <a
-            aria-label="Send Email"
-            href="mailto:ritika1905kumari@gmail.com"
-            target="_blank"
-          >
-            <i class="icon fas fa-envelope" aria-hidden="true"></i>
-          </a>
+      <div class="header-icons">
+        <a aria-label="My LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/ritika-kumari19/
+">
+          <i class="icon fab fa-linkedin-in" aria-hidden="true"></i>
+        </a>
+        <a aria-label="My Github Profile" target="_blank" href="https://github.com/Cayra19
+">
+          <i class="icon fab fa-github" aria-hidden="true"></i>
+        </a>
+        <a aria-label="My Résumé" target="_blank" href="./assets/Ritika_Kumari_Resume.pdf">
+          <i class="icon fas fa-file-pdf" aria-hidden="true"></i>
+        </a>
+        <a aria-label="Send Email" href="mailto:ritika1905kumari@gmail.com" target="_blank">
+          <i class="icon fas fa-envelope" aria-hidden="true"></i>
+        </a>
+      </div>
+    </div>
+    <a class="down" href="#about" data-scroll><i class="fas fa-chevron-down down-arrow"></i></a>
+  </div>
+  <!-- About Section Start -->
+  <section class="about" id="about">
+    <div class="content">
+      <div class="title"><span>About Me</span></div>
+      <div class="about-details">
+        <div class="left">
+          <img src="./assets/images/MyPic.jpeg" alt="Profile Picture" />
+        </div>
+        <div class="right">
+          <div class="topic">Passionate Software Developer | React Native & Java Enthusiast</div>
+
+          <p class="intro">
+            💻 I don’t just write code — I like solving problems. I mainly work with Java and focus on writing clean,
+            well-structured programs. I enjoy building apps that are easy to use and making sure everything runs
+            smoothly behind the scenes. I always stay curious, keep learning, and try to improve with every project. My
+            goal is to build things that work well and are actually useful in real life.
+          </p>
+
+          <div class="box-container">
+            <div class="box">
+              <i class="fas fa-code icon"></i>
+              <p>
+                <span>Technical Skills</span><br>
+                <strong>Core:</strong> DBMS, OS, DSA, OOPS<br>
+                <span>Languages:</span> Java, SQL, HTML, CSS, JS<br>
+                <strong>Frameworks:</strong> React Native, Spring Boot<br>
+                <strong>Tools:</strong> Git, GitHub, Jira, Netlify, Android Studio, IntelliJ, VS Code
+              </p>
+            </div>
+
+            <div class="box row-box">
+              <i class="fas fa-university icon"></i>
+              <div class="text">
+                <p><span>Institution:</span> Guru Gobind Singh Indraprastha University</p>
+                <p><span>College:</span> Bharati Vidyapeeth's Institute of Computer Applications and Management (BVICAM)
+                </p>
+              </div>
+            </div>
+            <div class="box">
+              <i class="fas fa-envelope icon"></i>
+              <p><span>Email</span><br>ritika1905kumari@gmail.com</p>
+            </div>
+
+            <div class="box">
+              <i class="fas fa-map-marker-alt icon"></i>
+              <p><span>Location</span><br>Bihar, India - 804408</p>
+            </div>
+            <div class="button">
+              <button>Download CV</button>
+            </div>
+          </div>
         </div>
       </div>
-      <a class="down" href="#about" data-scroll
-        ><i class="fas fa-chevron-down down-arrow"></i
-      ></a>
     </div>
+    </div>
+    </div>
+    </div>
+  </section>
 
-    <!-- Import JS: Particles Theme -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <!-- Import JS: Sweet Scroll -->
-    <script src="./assets/js/sweet-scroll.min.js"></script>
-    <!-- Import JS: Google Analytics -->
-    <script src="./assets/js/google-analytics.js"></script>
-    <!-- Import JS: Main Script -->
-    <script src="./assets/js/script.js"></script>
-  </body>
+  <!-- Import JS: Particles Theme -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <!-- Import JS: Sweet Scroll -->
+  <script src="./assets/js/sweet-scroll.min.js"></script>
+  <!-- Import JS: Google Analytics -->
+  <script src="./assets/js/google-analytics.js"></script>
+  <!-- Import JS: Main Script -->
+  <script src="./assets/js/script.js"></script>
+</body>
 </html>
