added skills section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- navgaition menu -->
   <nav>
     <div class="navbar">
-      <div class="logo"><a href="#">Portfolio</a></div>
+      <div class="logo"><a href="#">Portfolio .</a></div>
       <ul class="menu">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -85,7 +85,7 @@
               <p>
                 <span>Technical Skills</span><br>
                 <strong>Core:</strong> DBMS, OS, DSA, OOPS<br>
-                <span>Languages:</span> Java, SQL, HTML, CSS, JS<br>
+                <strong>Languages:</strong> Java, SQL, HTML, CSS, JS<br>
                 <strong>Frameworks:</strong> React Native, Spring Boot<br>
                 <strong>Tools:</strong> Git, GitHub, Jira, Netlify, Android Studio, IntelliJ, VS Code
               </p>
@@ -119,6 +119,57 @@
     </div>
     </div>
   </section>
+<!-- Skills Section Start -->
+  <section id="skills">
+  <h2>Skills</h2>
+  <div class="skills-container">
+    <div class="skill-box">
+      <span>Java</span>
+      <div class="progress-bar java"></div>
+    </div>
+    <div class="skill-box">
+      <span>SQL</span>
+      <div class="progress-bar sql"></div>
+    </div>
+    <div class="skill-box">
+      <span>React Native</span>
+      <div class="progress-bar reactNative"></div>
+    </div>
+    <div class="skill-box">
+      <span>HTML</span>
+      <div class="progress-bar html"></div>
+    </div>
+    <div class="skill-box">
+      <span>CSS</span>
+      <div class="progress-bar css"></div>
+    </div>
+    <div class="skill-box">
+      <span>JavaScript</span>
+      <div class="progress-bar js"></div>
+    </div>
+    <div class="skill-box">
+      <span>Data Structures & Algorithms</span>
+      <div class="progress-bar dsa"></div>
+    </div>
+    <div class="skill-box">
+      <span>C/C++</span>
+      <div class="progress-bar cpp"></div>
+    </div>
+    <div class="skill-box">
+      <span>Python</span>
+      <div class="progress-bar python"></div>
+    </div>
+    <div class="skill-box">
+      <span>Git & GitHub | VCS</span>
+      <div class="progress-bar git"></div>
+    </div>
+    <div class="skill-box">
+      <span>Object Oriented Programming</span>
+      <div class="progress-bar oops"></div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Import JS: Particles Theme -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
