projects section added

--- a/index.html
+++ b/index.html
@@ -169,6 +169,47 @@
     </div>
   </div>
 </section>
+<!-- Projects Section Start -->
+<section id="projects">
+  <h2 class="section-title">My Projects</h2>
+  <div class="projects-container">
+    <div class="project-card">
+      <img src="./assets/images/ChatApp.jpg" alt="ChatApp" onclick="openImage(this)">
+      <div class="project-info">
+        <h3>ChatApp</h3>
+        <a href="https://github.com/Cayra19/Chat_App" target="_blank">View Project</a>
+      </div>
+    </div>
+    <div class="project-card">
+      <img src="./assets/images/Portfolio.png" alt="Portfolio">
+      <div class="project-info">
+        <h3>Portfolio Website</h3>
+        <a href="https://github.com/Cayra19/Ritika-Kumari-Portfolio" target="_blank">View Project</a>
+      </div>
+    </div>
+    <div class="project-card">
+      <img src="./assets/images/Flappy.jpg" alt="FlappyBird">
+      <div class="project-info">
+        <h3>Flappy Bird Game</h3>
+        <a href="https://github.com/Cayra19/Flappy_Bird-Game" target="_blank">View Project</a>
+      </div>
+    </div>
+    <div class="project-card">
+      <img src="./assets/images/Routine.png" alt="RoutineTracker">
+      <div class="project-info">
+        <h3>Routine Tracker</h3>
+        <a href="https://github.com/developerOfIndia/Routine-Tracker" target="_blank">View Project</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Lightbox Popup -->
+<div id="imageModal" class="modal" onclick="closeImage()">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="modalImg">
+</div>
+
 
 
   <!-- Import JS: Particles Theme -->
