Experience section added

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </div>
     </div>
     <div class="project-card">
-      <img src="./assets/images/Flappy.jpg" alt="FlappyBird">
+      <img src="./assets/images/FlappyBird.jpg" alt="FlappyBird">
       <div class="project-info">
         <h3>Flappy Bird Game</h3>
         <a href="https://github.com/Cayra19/Flappy_Bird-Game" target="_blank">View Project</a>
@@ -209,6 +209,53 @@
   <span class="close">&times;</span>
   <img class="modal-content" id="modalImg">
 </div>
+
+<!-- Experience Section Start -->
+<section id="experience">
+  <h2 class="section-title">Experience</h2>
+  <div class="experience-container">
+
+    <div class="experience-card">
+      <div class="experience-header">
+        <h3>Front-End Developer Intern</h3>
+        <span>Jun 2024 – Aug 2024</span>
+      </div>
+      <h4>@ XZECT Labs Pvt. Ltd</h4>
+      <p>
+        - Recreated a fully responsive, high-performance website using <strong>React JS and Bootstrap</strong>.<br>
+        - Implemented as part of a website cloning project.<br>
+        - Achieved 40% faster development and 25% lower page load time.
+      </p>
+    </div>
+    
+    <div class="experience-card">
+      <div class="experience-header">
+        <h3>React Developer Intern</h3>
+        <span>Feb 2024 – Mar 2024</span>
+      </div>
+      <h4>@ Veritech Software IT Services</h4>
+      <p>
+        - Designed and developed a responsive ToDo web application using <strong>HTML, CSS, and JavaScript</strong>.<br>
+        - Implemented dynamic task management features for adding, editing, and deleting tasks.<br>
+        - Delivered an intuitive user interface with smooth user interactions.
+      </p>
+    </div>
+
+    <div class="experience-card">
+      <div class="experience-header">
+        <h3>Web Developer Intern</h3>
+        <span>Apr 2023 – Sep 2023</span>
+      </div>
+      <h4>@ iPistis Technologies Pvt. Ltd.</h4>
+      <p>
+        - Designed, validated, and optimized front-end components using <strong>React Native</strong>, improving functionality and responsiveness.<br>
+        - Resolved over 50+ issues on Jira, improving efficiency by 40%.<br>
+        - Collaborated with designers using Figma and developers through Git for seamless teamwork and integration.
+      </p>
+    </div>
+
+  </div>
+</section>
 
 
 
