--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="header">
       <h1>
         <span class="site-title">Ritika Kumari</span>
+        <p class="site-excel-at">What I excel at is creating software, websites, and apps.</p>
         <span class="site-description">Java Developer • App Developer • Web Developer</span>
       </h1>
 
@@ -257,6 +258,67 @@
   </div>
 </section>
 
+<!-- Contact Us Section Start -->
+<section id="contact" class="contact-section">
+  <div class="contact-heading">
+    <h2 class="section-title">Get in Touch</h2>
+    <div class="subtext-wrapper">
+    <p class="section-subtext">
+      I'm currently open to new opportunities, collaborations, or simply a good tech conversation.
+Have a project in mind? Let’s build something amazing together — my inbox is always open!</p>
+  </div>
+  </div>
+
+  <div class="contact-container">
+    <!-- Left Info Section -->
+    <div class="contact-left">
+      <h2>Let's Connect</h2>
+      <h3>I'm always open to new opportunities, exciting projects, or a tech chat.</h3>
+      <p><i class="fas fa-envelope contact-icon"></i> ritika1905kumari@gmail.com</p>
+<p><i class="fas fa-map-marker-alt contact-icon"></i> Bihar, India</p>
+
+
+      <div class="social-section">
+        <h3>Follow Me</h3>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    <div class="hire-section">
+  <p>I am available for <strong>Remote</strong> & <strong>Freelancing</strong> Jobs!</p>
+  <a href="#contact" class="hire-me-btn">
+    <i class="fas fa-briefcase"></i> Hire Me
+  </a>
+</div>
+ <blockquote class="contact-quote">
+  “Design is how it looks. Development is how it works. I love doing both.”
+</blockquote>
+    </div>
+
+    <!-- Right Message Section -->
+    <div class="contact-right">
+      <h2>Send a Message</h2>
+      <form>
+        <label for="name">Your Name <span class="required">*</span></label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+        <label for="email">Your Email <span class="required">*</span></label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+         <label for="subject">Subject <span class="required">*</span></label>
+        <input type="text" id="subject" name="subject" placeholder="Enter your subject" required>
+
+        <label for="message">Your Message <span class="required">*</span></label>
+        <textarea id="message" name="message" rows="5" placeholder="Tell me about your project or just say hello..." maxlength="200" required></textarea>
+
+        <div class="form-button-wrapper">
+          <button type="submit"><i class="fas fa-paper-plane"></i> Send Message</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
 
 
   <!-- Import JS: Particles Theme -->
