footer and features added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body oncontextmenu="return false" onselectstart="return false">
   <!-- Move to up button -->
 
   <!-- <div class="scroll-button">
@@ -281,8 +281,8 @@ Have a project in mind? Let’s build something amazing together — my inbox is
       <div class="social-section">
         <h3>Follow Me</h3>
         <div class="social-icons">
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/ritika-kumari19/"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Cayra19"><i class="fab fa-github"></i></a>
         </div>
       </div>
     <div class="hire-section">
@@ -320,6 +320,62 @@ Have a project in mind? Let’s build something amazing together — my inbox is
   </div>
 </section>
 
+<!-- Footer Section Start -->
+<footer class="footer">
+  <div class="footer-wrapper">
+    
+    <!-- Left: Intro -->
+    <div class="footer-section center-left">
+      <h3>Ritika Kumari</h3>
+      <div class="thank-you-note fade-in">
+        <h3>Thank you for visiting!</h3>
+        <p>
+          Passionate <strong>Software Developer</strong> focused on UI & experience.<br>
+          Have an idea? Let’s bring it to life — your next project starts here. 🚀
+
+        </p>
+        <p style="margin-top: 10px;">
+          <img src="https://flagcdn.com/w40/in.png" alt="India Flag" width="24" style="vertical-align: middle; border-radius: 3px;"> Bihar, India
+        </p>
+        <div class="chess-deco">
+          ♛ ♟ ♜ ♞
+        </div>
+      </div>
+    </div>
+
+    <!-- Center: Site Map -->
+    <div class="footer-section center-middle fade-in">
+      <h4>Site Map</h4>
+      <ul class="footer-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Right: Connect -->
+    <div class="footer-section center-right fade-in">
+      <h4>Connect</h4>
+      <div class="footer-contact">
+        <p><i class="fas fa-envelope"></i> ritika1905kumari@gmail.com</p>
+        <p><i class="fas fa-map-marker-alt"></i> Bihar, India</p>
+      </div>
+      <div class="footer-icons">
+        <a href="https://www.linkedin.com/in/ritika-kumari19/"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://github.com/Cayra19"><i class="fab fa-github"></i></a>
+        <a href="mailto:ritika1905kumari@gmail.com"><i class="fas fa-envelope"></i></a>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Bottom -->
+  <div class="footer-bottom">
+    <p>&copy; 2025 Ritika Kumari | Designed with <span class="heart">❤️</span> | All rights reserved.</p>
+  </div>
+</footer>
 
   <!-- Import JS: Particles Theme -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
